--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask             1.1.2
+click             7.1.1
+Flask             1.1.1
 Flask-SQLAlchemy  2.4.1
 gunicorn          20.0.4
 isort             4.3.21
