--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-click             7.1.1
-Flask             1.1.1
+asgiref           3.2.7
+astroid           2.4.1
+click             7.1.2
+colorama          0.4.3
+Django            3.0.6
+Flask             1.1.2
 Flask-SQLAlchemy  2.4.1
 gunicorn          20.0.4
 isort             4.3.21
