--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.2.7
 astroid==2.4.1
 click==7.1.2
 colorama==0.4.3
+dj-database-url==0.5.0
 Django==3.0.6
+django-heroku==0.3.1
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
@@ -21,4 +23,5 @@ sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
 Werkzeug==1.0.1
+whitenoise==5.1.0
 wrapt==1.12.1
