--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==0.5.0
 Django==3.0.7
 django-heroku==0.3.1
 Flask==1.1.2
+Flask-API==2.0
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
 isort==4.3.21
